# model-service

./: .gitignore  .pylintrc  Dockerfile  README.md  model_interface.py  model_server.py  preprocess.py  pyproject.toml  requirements.txt
.github/workflows/: pull_request.yml  release.yml
