[tool.poetry]
name = "model-service"
version = "0.1.0"
description = "This repo serves the model so that it can be queried."
authors = ["Your Name <you@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.2"
requests = "^2.30.0"
numpy = "^1.24.3"
pandas = "^2.0.1"
nltk = "^3.8.1"
scikit-learn = "^1.2.2"
flasgger = "^0.9.4"
prometheus-client = "^0.16.0"


[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
dslinter = "2.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
