[tool.poetry]
name = "model-service"
version = "0.1.0"
description = "This repo serves the model so that it can be queried."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/simple"
priority = "explicit"

[[tool.poetry.source]]
name = "PyPI"
priority = "default"


[tool.poetry.dependencies]
remlaverlib = {version = "^3.0.0", source = "test"}
python = "^3.10"
flask = "^2.3.2"
requests = "^2.30.0"
flasgger = "^0.9.4"
prometheus-client = "^0.16.0"
scikit-learn = "^1.2.2"


[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
dslinter = "2.0.9"


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
